// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text.native renders a snapshot for \`Text\` on \`native\` 1`] = `
<Text
  accessible={true}
  alignSelf="auto"
  allowFontScaling={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  margin={0}
  size={16}
  style={
    Array [
      Object {
        "alignSelf": "auto",
        "color": "#191919",
        "fontSize": 16,
        "lineHeight": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Apple
</Text>
`;

exports[`Text.native renders a snapshot for \`Text\` with \`color:blue\` on \`native\` 1`] = `
<Text
  accessible={true}
  alignSelf="auto"
  allowFontScaling={true}
  color="blue"
  disabled={false}
  ellipsizeMode="tail"
  margin={0}
  size={16}
  style={
    Array [
      Object {
        "alignSelf": "auto",
        "color": "blue",
        "fontSize": 16,
        "lineHeight": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Apple
</Text>
`;

exports[`Text.native renders a snapshot for \`Text\` with \`size:small\` on \`native\` 1`] = `
<Text
  accessible={true}
  alignSelf="auto"
  allowFontScaling={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  margin={0}
  size="small"
  style={
    Array [
      Object {
        "alignSelf": "auto",
        "color": "#191919",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Apple
</Text>
`;

exports[`Text.native renders a snapshot with \`alignSelf:center\` 1`] = `
<Text
  accessible={true}
  alignSelf="center"
  allowFontScaling={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  margin={0}
  size={16}
  style={
    Array [
      Object {
        "alignSelf": "center",
        "color": "#191919",
        "fontSize": 16,
        "lineHeight": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Apple
</Text>
`;

exports[`Text.native renders a snapshot with \`bold\` 1`] = `
<Text
  accessible={true}
  alignSelf="auto"
  allowFontScaling={true}
  bold={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  margin={0}
  size={16}
  style={
    Array [
      Object {
        "alignSelf": "auto",
        "color": "#191919",
        "fontSize": 16,
        "fontWeight": "bold",
        "lineHeight": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Bold
</Text>
`;

exports[`Text.native renders a snapshot with \`content\` 1`] = `
<Text
  accessible={true}
  alignSelf="auto"
  allowFontScaling={true}
  color="#191919"
  content={true}
  disabled={false}
  ellipsizeMode="tail"
  margin={0}
  size={16}
  style={
    Array [
      Object {
        "alignSelf": "auto",
        "color": "#191919",
        "fontSize": 16,
        "lineHeight": 25,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      },
      undefined,
    ]
  }
>
  Content
</Text>
`;

exports[`Text.native renders a snapshot with \`margin:0.5\` 1`] = `
<Text
  accessible={true}
  alignSelf="auto"
  allowFontScaling={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  margin={0.5}
  size={16}
  style={
    Array [
      Object {
        "alignSelf": "auto",
        "color": "#191919",
        "fontSize": 16,
        "lineHeight": 20,
        "marginBottom": 5,
        "marginLeft": 5,
        "marginRight": 5,
        "marginTop": 5,
      },
      undefined,
    ]
  }
>
  Apple
</Text>
`;
